<?xml version="1.0"?>
<package>
  <name>drone_example</name>
  <version>0.0.1</version>
  <description>The ar_takeoff package</description>
  <maintainer email="s133961@student.dtu.dk">s133961</maintainer>
  <license>Free-as-in-beer!</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
